Fix header alignment

--- a/resources/assets/less/bem/tracklisting.less
+++ b/resources/assets/less/bem/tracklisting.less
@@ -34,6 +34,9 @@
   }
 
   &__col {
+    &--title {
+      padding-left: 10px;
+    }
     &--dl {
       width: 32px;
     }
